Fix collapsing of images when there's attached audio

--- a/themes/fresh/post.scss
+++ b/themes/fresh/post.scss
@@ -37,7 +37,7 @@
       clear: both;
     }
 
-    > .ember-view {
+    .image-attachments > .ember-view {
       display: inline-block;
       vertical-align: middle;
     }
